--- a/System/Display.wap/index.html
+++ b/System/Display.wap/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="node_modules/shared/messages.js"></script>
+    <script src="node_modules/shared/router.js"></script>
     <script src="index.js"></script>
     <script src="commands.js"></script>
   </head>
