--- a/System/Applications/AppMenu.wap/index.html
+++ b/System/Applications/AppMenu.wap/index.html
@@ -5,7 +5,6 @@
   </head>
   <body>
     menu
-    <script>
-    </script>
+    <a href="http://localhost:3000/dispatch?name=LAUNCHER&command=launch&path=Applications/Terminal.wap">xterm</a>
   </body>
 </html>
