--- a/System/Widgets/Monitor.wap/index.html
+++ b/System/Widgets/Monitor.wap/index.html
@@ -5,8 +5,8 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
   </head>
   <body>
-    <a class="control" href="http://localhost:3000/dispatch?name=SCREEN&command=change&brightness=up">up</a>
-    <a class="control" href="http://localhost:3000/dispatch?name=SCREEN&command=change&brightness=down">down</a>
+    <a class="control" href="http://localhost:3000/dispatch?name=MONITOR&command=change&brightness=up">up</a>
+    <a class="control" href="http://localhost:3000/dispatch?name=MONITOR&command=change&brightness=down">down</a>
 
     <h3>status:</h3>
     <div id="output"></div>
