--- a/Applications/Viewer.wap/index.html
+++ b/Applications/Viewer.wap/index.html
@@ -3,9 +3,10 @@
   <head>
   </head>
   <body>
-    loading google mail...
+    loading file browser
     <script>
-      window.location = "http://localhost:3001";
+      console.log(window.location.search);
+      //window.location = "http://localhost:3001";
     </script>
   </body>
 </html>
