--- a/System/Applications/ControlBar.wap/index.html
+++ b/System/Applications/ControlBar.wap/index.html
@@ -6,7 +6,9 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h3>status:</h3>
-    <div id="output"></div>
+    <div id="container"></div>
   </body>
+  <script>
+    //window.resizeTo(400, 400);
+  </script>
 </html>
